Title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: [GRPC and protocol buffers]
+description: [Quick start and basic concepts of GRPC and protocol buffers]
